--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
+# dotenv environment constiables file
 .env
 .env.test
 .env.production
@@ -117,3 +117,6 @@ dist
 .yarn/install-state.gz
 .pnp.*
 {"mode":"full","isActive":false}
+
+#seeds for database
+seeds
