--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "moment": "^2.29.4",
     "mongoose": "^5.13.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
