--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "16.14.2"
+  },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "flash": "^1.1.0",
     "mongoose": "^5.13.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
